# macsdk

./: README.md  pyproject.toml
.ai_review/: project.md
.github/workflows/: main.yml
VM_provision/: .env.example  Containerfile  README.md  config.yml.example  pyproject.toml
VM_provision/src/vm_provision/: __init__.py  agents.py  cli.py  config.py  prompts.py
VM_provision/src/vm_provision/local_agents/vm_agent/: __init__.py  agent.py  config.py  models.py  tools.py
VM_provision/static/: index.html
docs/: index.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: creating-agents.md  creating-chatbots.md  migration-v0.6.md  using-knowledge-tools.md
docs/reference/: cli.md  configuration.md  formatter.md  middleware.md  protocol.md  tools.md
examples/: README.md
examples/agent-with-knowledge/: README.md  config.yml.example  pyproject.toml
examples/agent-with-knowledge/src/devops_specialist/: __init__.py  agent.py  cli.py  models.py  prompts.py  tools.py
examples/agent-with-knowledge/src/devops_specialist/facts/: service-catalog.md
examples/agent-with-knowledge/src/devops_specialist/skills/: deploy-service.md
examples/agent-with-knowledge/tests/: test_agent.py
examples/api-agent/: README.md  config.yml.example  pyproject.toml
examples/api-agent/src/api_agent/: __init__.py  agent.py  cli.py  models.py  prompts.py  tools.py
examples/api-agent/tests/: test_agent.py
examples/devops-chatbot/: README.md  config.yml  config.yml.example
examples/monorepo/: README.md
examples/monorepo/devops-chatbot/: .gitignore  README.md  config.yml  config.yml.example  pyproject.toml
examples/monorepo/devops-chatbot/src/devops_chatbot/: agents.py  cli.py
examples/monorepo/devops-chatbot/src/devops_chatbot/local_agents/: __init__.py
examples/monorepo/devops-chatbot/src/devops_chatbot/local_agents/api/: agent.py  cli.py  models.py  prompts.py
examples/multirepo/: README.md
examples/multirepo/api-agent/: Containerfile  README.md  config.yml.example
examples/multirepo/devops-chatbot/: Containerfile  README.md  config.yml  config.yml.example  pyproject.toml
src/macsdk/: _version.py  prompts.py
src/macsdk/agents/: __init__.py
src/macsdk/cli/: main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_api_with_remote_certs.py  test_chatbot_agent_integration.py  test_cli_features.py  test_knowledge_integration.py  test_project_generation.py
tests/unit/: __init__.py
(+98 files in other folders)
