[project]
name = "api-agent"
version = "0.1.0"
description = "Agent for interacting with REST APIs using JSONPlaceholder as example"
requires-python = ">=3.12"

dependencies = [
    "macsdk",
    "aiohttp>=3.9",
    "jsonpath-ng>=1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
api-agent = "api_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

